Added a Detector Class\n Added scripts to create a Dataset of Digits\n Added a JN to Train a classifier

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ app/.vscode/
 app/sudokusolver/linux/
 app/sudokusolver/src/sudokusolver/__pycache__/
 app/venv/
+test/Samples/
+test/Dataset/
+.vscode
