*changed test to doc *created script for dataset creation *added line to supress TF messages

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ app/.vscode/
 app/sudokusolver/linux/
 app/sudokusolver/src/sudokusolver/__pycache__/
 app/venv/
-test/Samples/
-test/Dataset/
+doc/Samples/
+doc/Dataset/
+doc/.ipynb_checkpoints/
 .vscode
